--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,10 @@
 <html>
     <head>
-        <title>Information Retrieval Project</title>
+        <title>IR-project</title>
     </head>
     <body>
         <h1>
+            Information Retrieval Project
             Coming Soon ...
         </h1>
     </body>
