--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>
-            Information Retrieval Project
+            Information Retrieval Project <br>
             Coming Soon ...
         </h1>
     </body>
